--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -22,15 +22,21 @@ package="isc.apps.android.videofy" >
     android:label="@string/app_name">
 
     <!-- Main activity -->
-    <activity
-        android:name=".AndroidMobileAppActivity"
-        android:label="@string/app_name" >
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+      <activity android:name=".AndroidMobileAppActivity"
+                  android:label="@string/app_name">
+          <intent-filter>
+              <action android:name="android.intent.action.MAIN" />
+              <category android:name="android.intent.category.DEFAULT"/>
+          </intent-filter>
+      </activity>
 
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
-    </activity>
+    <!-- Splash Screen -->
+      <activity android:name="SplashScreen">
+          <intent-filter>
+              <action android:name="android.intent.action.MAIN"></action>
+              <category android:name="android.intent.category.LAUNCHER"></category>
+          </intent-filter>
+      </activity>
 </application>
 
 </manifest>
