--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -22,8 +22,7 @@ package="isc.apps.android.videofy" >
     android:label="@string/app_name">
 
     <!-- Main activity -->
-      <activity android:name=".AndroidMobileAppActivity"
-                  android:label="@string/app_name">
+      <activity android:name=".AndroidMobileAppActivity" android:label="@string/app_name">
           <intent-filter>
               <action android:name="android.intent.action.MAIN" />
               <category android:name="android.intent.category.DEFAULT"/>
@@ -31,7 +30,7 @@ package="isc.apps.android.videofy" >
       </activity>
 
     <!-- Splash Screen -->
-      <activity android:name="SplashScreen">
+      <activity android:name="SplashScreen" android:theme="@style/AppTheme">
           <intent-filter>
               <action android:name="android.intent.action.MAIN"></action>
               <category android:name="android.intent.category.LAUNCHER"></category>
