--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
   without the express prior written permission of the copyright holder.
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.splash"
+    package="isc.apps.android.videofy"
     android:versionCode="2"
     android:versionName="1.0" >
 
